fix: flex-wrap property

--- a/src/components/button-toggle/button-toggle.scss
+++ b/src/components/button-toggle/button-toggle.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 268px;
   height: 24px;
   font-weight: 400;
