--- a/src/components/card-registration/card-registration.scss
+++ b/src/components/card-registration/card-registration.scss
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 380px;
   height: fit-content;
   min-height: 645px;
