--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   position: relative;
   width: 270px;
   height: 257px;
