--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -35,7 +35,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 100%;
   height: fit-content;
 
