--- a/src/components/footer-creative/footer-creative.scss
+++ b/src/components/footer-creative/footer-creative.scss
@@ -56,7 +56,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 100%;
   height: 26px;
   margin-right: 1px;
